Added hostname environemtn variable to allow custom hostname

--- a/homepage/menu.html
+++ b/homepage/menu.html
@@ -62,7 +62,7 @@ body::-webkit-scrollbar {
     - <a href="https://app.birdweather.com" target="_content">BirdWeather</a><br>
     - <a href="https://github.com/mcguirepr89/BirdNET-Pi" target="_content">Repository</a><br>
     - <a href="https://github.com/mcguirepr89/BirdNET-Pi/wiki" target="_content">Wiki Help Page</a><br>
-    - <a href="https://v2.wttr.in/" target="content">Wttr.in Report</a><br>
+    - <a href="https://v2.wttr.in/56.369,-3.13556.369,-3.13556.5292,-3.074556.5292,-3.0745" target="content">Wttr.in Report</a><br>
     - <a href="https://birdnet.cornell.edu" target="_content">BirdNET @ Cornell</a><br>
     <hr class="solid">
 
