Set up home pages with custom URL

--- a/homepage-templates/mobile.html
+++ b/homepage-templates/mobile.html
@@ -418,7 +418,7 @@ footer {
 					<tr class="file">
 						<td></td>
 						<td>
-							<a href="http://birdnetpi.local:8080">
+							<a href="http://BIRDNET_HOST.local:8080">
 								<svg width="1.5em" height="1em" version="1.1" viewBox="0 0 317 259"><use xlink:href="#folder"></use></svg>
 								<span class="name">⚙ Analysis Log</span>
 							</a>
@@ -427,7 +427,7 @@ footer {
 					<tr class="file">
 						<td></td>
 						<td>
-							<a href="http://birdnetpi.local:8888">
+							<a href="http://BIRDNET_HOST.local:8888">
 								<svg width="1.5em" height="1em" version="1.1" viewBox="0 0 317 259"><use xlink:href="#folder"></use></svg>
 								<span class="name">⚝ Extraction Log</span>
 							</a>
