--- a/homepage-templates/menu.html
+++ b/homepage-templates/menu.html
@@ -43,18 +43,18 @@ body::-webkit-scrollbar {
   <body>
 
     <h5>Extractions</h5>
-    - <a href="http://birdnetpi.local/By_Date/" target="content">By Date</a><br>
-    - <a href="http://birdnetpi.local/By_Common_Name/" target="content">By Common Name</a><br>
-    - <a href="http://birdnetpi.local/By_Scientific_Name/" target="content">By Scientific Name</a><br>
-    - <a href="http://birdnetpi.local/Processed/" target="content">Processed</a><br>
+    - <a href="http://BIRDNET_HOST.local/By_Date/" target="content">By Date</a><br>
+    - <a href="http://BIRDNET_HOST.local/By_Common_Name/" target="content">By Common Name</a><br>
+    - <a href="http://BIRDNET_HOST.local/By_Scientific_Name/" target="content">By Scientific Name</a><br>
+    - <a href="http://BIRDNET_HOST.local/Processed/" target="content">Processed</a><br>
 
     <hr class="solid">
 
     <h5>System Links</h5>
-    - <a href="http://birdnetpi.local/scripts/" target="content">Tools</a><br>
-    - <a href="http://birdnetpi.local/phpsysinfo/" target="content">System Info</a><br>
-    - <a href="http://birdnetpi.local:8080" target="content">BirdNET-Lite Log</a><br>
-    - <a href="http://birdnetpi.local:8888" target="content">Extraction Log</a><br>
+    - <a href="http://BIRDNET_HOST.local/scripts/" target="content">Tools</a><br>
+    - <a href="http://BIRDNET_HOST.local/phpsysinfo/" target="content">System Info</a><br>
+    - <a href="http://BIRDNET_HOST.local:8080" target="content">BirdNET-Lite Log</a><br>
+    - <a href="http://BIRDNET_HOST.local:8888" target="content">Extraction Log</a><br>
 
     <hr class="solid">
 
