--- a/homepage-templates/menu_de.html
+++ b/homepage-templates/menu_de.html
@@ -43,18 +43,18 @@ body::-webkit-scrollbar {
   <body>
 
     <h5>Extraktionen</h5>
-    - <a href="https://birdnetpi.local/By_Date/" target="content">Nach Datum</a><br>
-    - <a href="https://birdnetpi.local/By_Common_Name/" target="content">Nach Namen</a><br>
-    - <a href="https://birdnetpi.local/By_Scientific_Name/" target="content">Nach wiss. Namen</a><br>
-    - <a href="https://birdnetpi.local/Processed/" target="content">Verarbeitet</a><br>
+    - <a href="https://BIRDNET_HOST.local/By_Date/" target="content">Nach Datum</a><br>
+    - <a href="https://BIRDNET_HOST.local/By_Common_Name/" target="content">Nach Namen</a><br>
+    - <a href="https://BIRDNET_HOST.local/By_Scientific_Name/" target="content">Nach wiss. Namen</a><br>
+    - <a href="https://BIRDNET_HOST.local/Processed/" target="content">Verarbeitet</a><br>
 
     <hr class="solid">
 
     <h5>System-Links</h5>
-    - <a href="https://birdnetpi.local/scripts/" target="content">Tools</a><br>
-    - <a href="https://birdnetpi.local/phpsysinfo/" target="content">System Info</a><br>
-    - <a href="https://birdnetpi.local:8080" target="content">BirdNET-Lite Log</a><br>
-    - <a href="https://birdnetpi.local:8888" target="content">Extraction Log</a><br>
+    - <a href="https://BIRDNET_HOST.local/scripts/" target="content">Tools</a><br>
+    - <a href="https://BIRDNET_HOST.local/phpsysinfo/" target="content">System Info</a><br>
+    - <a href="https://BIRDNET_HOST.local:8080" target="content">BirdNET-Lite Log</a><br>
+    - <a href="https://BIRDNET_HOST.local:8888" target="content">Extraction Log</a><br>
 
     <hr class="solid">
 
